--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".AddItem">
 
@@ -19,11 +21,12 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/web_back_btn"
-            android:layout_width="wrap_content"
+
+            android:id="@+id/add_back_btn"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="60dp"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
-            android:backgroundTint="@android:color/transparent"
             android:padding="10dp"
             android:scaleType="centerInside"
             app:srcCompat="@drawable/left_48px" />
@@ -31,40 +34,346 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_toEndOf="@+id/web_back_btn"
+            android:layout_toEndOf="@+id/add_back_btn"
             android:gravity="center"
-            android:text="@string/add_item"
+            android:text="back"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold" />
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="50dp"
+        <Button
+            android:id="@+id/add_btn"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
+            android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:padding="11dp"
-            android:scaleType="centerInside"
-            app:srcCompat="@drawable/shopyy_icon" />
+            android:drawableEnd="@drawable/add_28px"
+            android:drawablePadding="15dp"
+            android:text="ADD"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
-    <RelativeLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginTop="30dp">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/image_panel"
+                android:layout_width="114dp"
+                android:layout_height="114dp"
+                android:layout_centerInParent="true"
+                android:backgroundTint="@color/gray1">
+
+                <ImageView
+                    android:id="@+id/image_val"
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
+                    android:layout_gravity="center"
+                    android:background="@color/white"
+                    android:scaleType="center"
+                    app:srcCompat="@drawable/image_100px" />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@+id/image_panel"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/gallery_btn"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_width="70dp"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/gr1_start"
+                    android:drawableRight="@drawable/photo_gallery_26px"
+                    android:text="+"
+                    android:textSize="25sp" />
+
+                <Button
+                    android:id="@+id/camera_btn"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_width="70dp"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/gr1_end"
+                    android:drawableRight="@drawable/camera_26px"
+                    android:text="+"
+                    android:textSize="25sp" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+        </RelativeLayout>
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <EditText
+            <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="55dp"
+                    android:layout_marginEnd="60dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="Name:"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/itemname_val"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="40dp"
+                    android:layout_marginEnd="40dp"
+                    android:layout_marginBottom="10dp"
+                    android:autofillHints="name"
+                    android:background="@drawable/edittext_round"
+                    android:hint="Item Name"
+                    android:inputType="text|textNoSuggestions"
+                    android:lineHeight="5dp"
+                    android:maxWidth="@dimen/maxwidth_edittext"
+                    android:maxLines="1"
+
+                    android:paddingStart="25dp"
+                    android:paddingTop="15dp"
+                    android:paddingEnd="25dp"
+                    android:paddingBottom="15dp"
+                    android:textColor="@color/text_col"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    tools:targetApi="p" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="55dp"
+                    android:layout_marginEnd="60dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="Barcode:"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="8">
+
+                    <EditText
+                        android:id="@+id/barcode_val"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:layout_marginStart="40dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:autofillHints="name"
+                        android:background="@drawable/edittext_round"
+                        android:hint="Barcode"
+                        android:inputType="text|textNoSuggestions"
+                        android:lineHeight="5dp"
+                        android:maxWidth="@dimen/maxwidth_edittext"
+                        android:maxLines="1"
+
+                        android:paddingStart="25dp"
+                        android:paddingTop="15dp"
+                        android:paddingEnd="25dp"
+                        android:paddingBottom="15dp"
+                        android:textColor="@color/text_col"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        tools:targetApi="p" />
+                    <ImageButton
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:id="@+id/barscan_btn"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginEnd="40dp"
+                        android:layout_weight="6"
+                        android:scaleType="centerInside"
+                        app:srcCompat="@drawable/barcode_32px"/>
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="55dp"
+                    android:layout_marginEnd="60dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="Description:"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/description_val"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="40dp"
+                    android:layout_marginEnd="40dp"
+                    android:layout_marginBottom="10dp"
+                    android:autofillHints="name"
+                    android:background="@drawable/edittext_round"
+                    android:hint="Description"
+                    android:inputType="text|textNoSuggestions"
+                    android:lineHeight="5dp"
+                    android:maxWidth="@dimen/maxwidth_edittext"
+                    android:maxLines="1"
+
+                    android:paddingStart="25dp"
+                    android:paddingTop="15dp"
+                    android:paddingEnd="25dp"
+                    android:paddingBottom="15dp"
+                    android:textColor="@color/text_col"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    tools:targetApi="p" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="55dp"
+                        android:layout_marginEnd="60dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="Quantity:"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
+
+                    <EditText
+                        android:id="@+id/quantity_val"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="40dp"
+                        android:layout_marginEnd="20dp"
+                        android:layout_marginBottom="10dp"
+                        android:autofillHints="name"
+                        android:background="@drawable/edittext_round"
+                        android:hint="Quantity"
+                        android:inputType="numberSigned|textNoSuggestions"
+                        android:lineHeight="5dp"
+                        android:maxWidth="@dimen/maxwidth_edittext"
+                        android:maxLines="1"
+
+                        android:paddingStart="25dp"
+                        android:paddingTop="15dp"
+                        android:paddingEnd="25dp"
+                        android:paddingBottom="15dp"
+                        android:textColor="@color/text_col"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        tools:targetApi="p" />
+                </androidx.appcompat.widget.LinearLayoutCompat>
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="35dp"
+                        android:layout_marginEnd="60dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="Price:"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
+
+                    <EditText
+                        android:id="@+id/price_val"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="40dp"
+                        android:layout_marginBottom="10dp"
+                        android:autofillHints="name"
+                        android:background="@drawable/edittext_round"
+                        android:hint="Price"
+                        android:inputType="numberSigned|textNoSuggestions"
+                        android:lineHeight="5dp"
+                        android:maxWidth="@dimen/maxwidth_edittext"
+                        android:maxLines="1"
+
+                        android:paddingStart="25dp"
+                        android:paddingTop="15dp"
+                        android:paddingEnd="25dp"
+                        android:paddingBottom="15dp"
+                        android:textColor="@color/text_col"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        tools:targetApi="p" />
+                </androidx.appcompat.widget.LinearLayoutCompat>
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+
         </androidx.appcompat.widget.LinearLayoutCompat>
 
-    </RelativeLayout>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+
 
 </androidx.appcompat.widget.LinearLayoutCompat>
